# HD-BET

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
docs/: conf.py
src/hd_bet/: config.py  data_loading.py  hd_bet_cli.py  network_architecture.py  paths.py  predict_case.py  run.py  utils.py
tests/: test_package.py
